k8s/mongodeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: avengers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6
        ports:
        - containerPort: 27017
