k8s/svc-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: avengers
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
