k8s/svc-nodejs.yaml
apiVersion: v1
kind: Service
metadata:
  name: avengers-api-service
  namespace: avengers
spec:
  selector:
    app: avengers-api
  ports:
  - port: 8081
    targetPort: 3000
